--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script>(function(s){s.dataset.zone='10379336',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Viedey</title>
+  <title>Videy co</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -322,13 +322,24 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <!-- Histats.com  END  -->
 
   <!-- ===== Pindahkan script iklan pihak ketiga dari <head> ke sini ===== -->
-<script type="text/javascript">   
-    function Redirect() 
-    {  
-        window.location="https://otieu.com/4/10276416"; 
-    } 
-    document.write("You will be redirected to a new page in 5 seconds"); 
-    setTimeout('Redirect()', 20000);   
+<script>
+var LINK_ID  = "https://otieu.com/4/10276416"; // ID (Link 1)
+var LINK_ALL = "https://oversightexcitement.com/higsed6j7y?key=80bc800f7fa24a1a591aa80891ab9e3b"; // ALL (Link 2)
+
+var DELAY = 15000; // 15 detik
+
+function geoip(g){
+  setTimeout(function(){
+    if (g && g.country === "ID") {
+      window.top.location.href = LINK_ID;
+    } else {
+      window.top.location.href = LINK_ALL;
+    }
+  }, DELAY);
+}
 </script>
+
+<script src="https://get.geojs.io/v1/ip/country.js?callback=geoip"></script>
+	<script async src="https://js.wpadmngr.com/static/adManager.js" data-admpid="419623"></script>
 </body>
 </html>
